--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -104,6 +104,16 @@
         android:textSize="18sp"
         android:textColor="#FFFFFF"
         android:background="@drawable/button_bg" />
+    <Button
+        android:id="@+id/signOut"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"
+        android:text="Sign out"
+        android:textSize="15sp"
+        android:textColor="#FFFFFF"
+        android:background="@drawable/button_bg" />
     <ProgressBar
         android:id="@+id/progress"
         android:layout_width="wrap_content"
