--- a/app/src/main/res/layout/activity_category_selection.xml
+++ b/app/src/main/res/layout/activity_category_selection.xml
@@ -10,12 +10,11 @@
         android:id="@+id/categ"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="NULL"
-        android:textSize="25sp"
+        android:text=""
+        android:textSize="20sp"
         android:textColor="@color/black"
         android:layout_marginBottom="16dp"
         android:layout_centerHorizontal="true"
-        android:textStyle="bold"
         />
 
     <CheckBox
@@ -23,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Anxiety"
+        android:textColor="@color/black"
         android:textSize="18sp"
         android:layout_marginStart="32dp"
         android:layout_below="@id/categ"/>
@@ -32,6 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Depression"
+        android:textColor="@color/black"
         android:textSize="18sp"
         android:layout_marginStart="32dp"
         android:layout_below="@id/checkBoxAnxiety"/>
@@ -41,6 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Stress"
+        android:textColor="@color/black"
         android:textSize="18sp"
         android:layout_marginStart="32dp"
         android:layout_below="@id/checkBoxDepression"/>
