--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,136 +1,179 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp"
-    android:background="#F2F2F2">
-
-    <!-- First Text Input -->
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginBottom="24dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:padding="12dp"
-        android:background="?android:attr/selectableItemBackground">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="What Should I Call You?"
-            android:textSize="18sp"
-            android:textColor="#4A4A4A" />
-
-        <EditText
-            android:id="@+id/editTextName"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Type here"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            android:background="@drawable/edit_text_bg"
-            android:padding="12dp" />
-    </LinearLayout>
+            android:layout_height="40dp"
+            android:elevation="16dp"
+            android:background="#F2F2F2"
+            android:orientation="horizontal">
 
-    <!-- Second Text Input -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginBottom="24dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:padding="12dp"
-        android:background="?android:attr/selectableItemBackground">
+            <ImageView
+                android:id="@+id/imgMenu"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:padding="8dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_menu_item"
+                android:background="#F2F2F2"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="CalmCove"
+                android:layout_gravity="center_vertical"
+                android:textSize="18sp"
+                android:textStyle="bold|normal"
+                android:textColor="#ff4081"
+                />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tell me about your mood (Happy, Upset, etc.)"
-            android:textSize="18sp"
-            android:textColor="#4A4A4A" />
 
-        <EditText
-            android:id="@+id/editTextMood"
+        </LinearLayout>
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Type here"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            android:background="@drawable/edit_text_bg"
-            android:padding="12dp" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="16dp"
+            android:background="#F2F2F2">
+
+            <!-- First Text Input -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginBottom="24dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:padding="12dp"
+                android:background="?android:attr/selectableItemBackground">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="What Should I Call You?"
+                    android:textSize="18sp"
+                    android:textColor="#4A4A4A" />
+
+                <EditText
+                    android:id="@+id/editTextName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Type here"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:background="@drawable/edit_text_bg"
+                    android:padding="12dp" />
+            </LinearLayout>
+
+            <!-- Second Text Input -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginBottom="24dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:padding="12dp"
+                android:background="?android:attr/selectableItemBackground">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Tell me about your mood (Happy, Upset, etc.)"
+                    android:textSize="18sp"
+                    android:textColor="#4A4A4A" />
+
+                <EditText
+                    android:id="@+id/editTextMood"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Type here"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:background="@drawable/edit_text_bg"
+                    android:padding="12dp" />
+            </LinearLayout>
+
+            <!-- Third Text Input -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginBottom="24dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:padding="12dp"
+                android:background="?android:attr/selectableItemBackground">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Be Specific about your problem (Less marks, lonely, etc.)"
+                    android:textSize="18sp"
+                    android:textColor="#4A4A4A" />
+
+                <EditText
+                    android:id="@+id/editTextProb"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Type Here"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:background="@drawable/edit_text_bg"
+                    android:padding="12dp" />
+            </LinearLayout>
+
+            <!-- Generate Help Button -->
+            <Button
+                android:id="@+id/buttonGenerateHelp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="Generate Help"
+                android:textSize="18sp"
+                android:textColor="#FFFFFF"
+                android:background="@drawable/button_bg" />
+            <Button
+                android:id="@+id/signOut"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="30dp"
+                android:text="Sign out"
+                android:textSize="15sp"
+                android:textColor="#FFFFFF"
+                android:background="@drawable/button_bg" />
+            <Button
+                android:id="@+id/graph"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="30dp"
+                android:text="Graph"
+                android:textSize="15sp"
+                android:textColor="#FFFFFF"
+                android:background="@drawable/button_bg" />
+            <ProgressBar
+                android:id="@+id/progress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:indeterminate="true"
+                android:indeterminateTint="@color/black"
+                android:visibility="gone" />
+
+        </LinearLayout>
     </LinearLayout>
+    <include layout="@layout/nav_drawer"/>
 
-    <!-- Third Text Input -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginBottom="24dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:padding="12dp"
-        android:background="?android:attr/selectableItemBackground">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Be Specific about your problem (Less marks, lonely, etc.)"
-            android:textSize="18sp"
-            android:textColor="#4A4A4A" />
-
-        <EditText
-            android:id="@+id/editTextProb"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Type Here"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            android:background="@drawable/edit_text_bg"
-            android:padding="12dp" />
-    </LinearLayout>
-
-    <!-- Generate Help Button -->
-    <Button
-        android:id="@+id/buttonGenerateHelp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="Generate Help"
-        android:textSize="18sp"
-        android:textColor="#FFFFFF"
-        android:background="@drawable/button_bg" />
-    <Button
-        android:id="@+id/signOut"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
-        android:text="Sign out"
-        android:textSize="15sp"
-        android:textColor="#FFFFFF"
-        android:background="@drawable/button_bg" />
-    <Button
-        android:id="@+id/graph"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
-        android:text="Graph"
-        android:textSize="15sp"
-        android:textColor="#FFFFFF"
-        android:background="@drawable/button_bg" />
-    <ProgressBar
-        android:id="@+id/progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:indeterminate="true"
-        android:indeterminateTint="@color/black"
-        android:visibility="gone" />
-
-</LinearLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
